fix: email overflow

--- a/src/blocks/user/__info/user__info.css
+++ b/src/blocks/user/__info/user__info.css
@@ -6,5 +6,4 @@
     line-height: 26px;
     display: flex;
     flex-direction: column;
-    text-overflow: ellipsis;
 }
