--- a/src/blocks/user/__name/user__name.css
+++ b/src/blocks/user/__name/user__name.css
@@ -5,5 +5,8 @@
     line-height: 26px;
     margin-top: 20px;
     margin-bottom: 20px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden; 
 }
   
